--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/bbfc4be646.js" crossorigin="anonymous"></script>
 
-    <!-- customization  -->
+    <!-- config customization -->
  <script>
     tailwind.config = {
         theme: {
@@ -33,13 +33,21 @@
         }
     }
 </script>
+
+<style>
+    
+.manrope-house {
+  font-family: "Manrope", sans-serif;
+}
+</style>
 </head>
 
-<body>
+<body class="manrope-house">
 
     <header>
-        <h1 class="text-2xl font-bold">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, labore?</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, modi.</p>
+        <nav class="container mx-auto">
+
+        </nav>
     </header>
 
     <main>
