--- a/index.html
+++ b/index.html
@@ -46,7 +46,57 @@
 
     <header>
         <nav class="container mx-auto">
-
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] p-2"></i>
+                  <a class="btn btn-ghost text-2xl font-[#212121]">Rinterio</a>
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1">
+                    <li><a class="font-bold">Home</a></li>
+                    <li>
+                      
+                        <summary>Services</summary>
+                    </li>
+                    <li><a>Portfolio</a></li>
+                    <li><a>Blogs</a></li>
+                    <li><a>Contact Us</a></li>
+                  </ul>
+                </div>
+                <div class="navbar-end">
+                    <i class="fa-solid fa-magnifying-glass rounded-full bg-[#FFFFFF] p-2 m-2"></i>
+                    <i class="fa-solid fa-cart-shopping rounded-full text-g-500 bg-[#FFFFFF] p-2 m-2"></i>
+                  <a class="btn text-black rounded-full bg-[#ABEF5F]">Book Consult<i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#1C1C1C] text-white p-2"></i>
+                  </a>
+                  <div class="navbar bg-base-100">
+                    <div class="navbar-start">
+                      <div class="dropdown">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            class="h-5 w-5"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path
+                              stroke-linecap="round"
+                              stroke-linejoin="round"
+                              stroke-width="2"
+                              d="M4 6h16M4 12h8m-8 6h16" />
+                          </svg>
+                        </div>
+                        <ul
+                          tabindex="0"
+                          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                          <li><a class="font-bold">Home</a></li>
+                          <li><a>Services</a></li>
+                          <li><a>Portfolio</a></li>
+                          <li><a>Blogs</a></li>
+                          <li><a>Contact Us</a></li>
+                          
+                      </div>
+                </div>
+              </div>
         </nav>
     </header>
 
