--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
                 </div>
             </div>
         </nav>
+
+        <!-- banner -->
+        <section class="mx-auto text-center">
+            
+             <img src="./assets/banner.png" alt=""  class="block mx-auto">
+
+            <h1 class="text-4xl font-bold pt-4">A barn house of this design has a <br> striking appearance</h1>
+            <p class="pt-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal <br> accents, and large windows that flood the space with natural light.</p>
+        </section>
     </header>
 
     <main>
