banner button added

--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
              <img src="./assets/banner.png" alt=""  class="block mx-auto">
 
             <h1 class="text-4xl font-bold pt-4">A barn house of this design has a <br> striking appearance</h1>
-            <p class="pt-4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal <br> accents, and large windows that flood the space with natural light.</p>
+            <p class="pt-4 sm:justify-normal">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,<br> sleek metal  accents, and large windows that flood the space with natural light.</p>
+            <a class="btn text-black rounded-full bg-[#D4F6AE] inline-flex items-center px-4 py-2">
+                View Details
+                <i class="fa-solid fa-arrow-right -rotate-45 rounded-full bg-[#ABEF5F] text-black p-2 ml-2"></i>
+            </a>
         </section>
     </header>
 
