about us added without image

--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
     </header>
 
     <main>
+        <section class="bg-[#F4F4F4] mt-20">
+            <div class="p-20">
+                
+                <a class="btn text-black rounded-full bg-[#FFFFFF] inline-flex items-center px-4 py-2">                    <i class="fa-solid fa-arrow-right  rounded-full text-black p-2 "></i>
+                    About Us
+                </a>
+
+            <h1 class="font-bold text-4xl py-5">We design thoughtful, <br> liveable spaces</h1>
+            <p>The barn house captivates with its blend of rustic charm and <br> 
+                modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+        </section>
 
     </main>
 
