latest project first row added

--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 
     <main>
         <section class="bg-[#F4F4F4] mt-20">
-            <div class="flex flex-col sm:flex-row pt-20">
+            <div class="flex flex-col sm:flex-row pt-0">
                 <div class="flex-1">
                     <div class="p-10 sm:p-20">
                         <div class="flex flex-col items-center text-center sm:text-left sm:items-start sm:flex-col">
                             <div class="sm:w-full">
-                                <img src="./assets/Vector.png" alt="">
-                                <a class="btn text-black rounded-full bg-[#FFFFFF] inline-flex items-center px-4 py-2 mx-auto sm:mx-0">
+                                <img class="hidden sm:block" src="./assets/Vector.png" alt="">
+                                <a class="btn text-black rounded-full bg-[#FFFFFF] inline-flex items-center pl-4 pr-7 py-2 mx-auto sm:mx-0">
                                     <i class="fa-solid fa-arrow-right rounded-full text-black p-2"></i>
                                     About Us
                                 </a>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="flex-1">
-                    <img class="w-full px-10 h-auto object-cover" src="./assets/Rectangle.png" alt="">
+                    <img class="w-full px-10 pt-20 h-auto object-cover" src="./assets/Rectangle.png" alt="">
                 </div>
             </div>
 
@@ -222,7 +222,7 @@
         </section>
                
  <!-- our latest portfolio section  -->
-        <section class="mt-20">
+        <section class="mt-20 mb-6">
             <div class="flex flex-col items-center w-full text-center">
                 <a class="btn text-black rounded-full bg-[#EEFCDF] inline-flex items-center px-4 py-2 mb-4">
                     <i class="fa-solid fa-arrow-right rounded-full text-black p-2"></i>
@@ -235,6 +235,29 @@
                     The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.
                 </p>
             </div>
+
+            <!-- our latest portfolio  -->
+             <div class="flex justify-center space-x-5 mx-auto">
+            <div class="flex border rounded-xl p-6 ml-8 w-6/12">
+                    <div>
+                        <img src="./assets/img1.png" alt="">
+                    </div>
+
+                    <div class="pl-4">
+                        <h1 class="font-bold pt-4">Commercial</h1>
+                        <p>
+                            The barn house captivates with its blend of rustic charm <br> and modern. The barn house captivates with its blend of <br> rustic charm and modern .
+                        </p>
+                    </div>                  
+            </div>
+
+            <div class="border rounded-xl px-4 pt-4">
+                <img src="./assets/img2.png" alt="">
+            </div>
+        </div>
+
+
+        
         </section>
 
         <!-- read our article section  -->
